--- a/mit/events.html
+++ b/mit/events.html
@@ -62,6 +62,7 @@
                         <a href="../other/writing.html">Writing</a>
                         <a href="../other/gallery.html">Gallery</a>
                         <a href="../other/news.html">News</a>
+                        <a href="../other/links.html">Links</a>
                     </div>
                 </div>
             </nav>
@@ -69,13 +70,129 @@
 
         <main>
             <h1>Events</h1>
-            <h2 id="compositionrecital">Composition Recital</h2>
-            The composition recital already happened on May 14th, 2025. Those of
-            you looking for recordings of the pieces can find them on this
+            <h2>Upcoming events</h2>
+            There are no upcoming events.
+
+            <h2>Past events</h2>
+            <h3 id="compositionrecital">Composition Recital</h3>
+            This event already happened on May 14th, 2025.
+            You can find recordings of the pieces on
             <a
                 href="https://www.youtube.com/playlist?list=PLRjA4SLedN6RrFRvtnvr-VQK9_DRHAdky"
-                >playlist</a
+                >this playlist</a
             >.
+            The program was as follows:
+            <ul>
+                <li>Henry Mancini (arr. Holden Mui): <em>Moon River</em></li>
+                <li>Holden Mui: Fugue in E Major</li>
+                <li>Holden Mui: <em>Serenade and Toccata</em></li>
+                <li>Holden Mui: <em>Concert Etude for Solo Flute</em></li>
+                <li>Holden Mui: <em>Poetry</em></li>
+                <li>Holden Mui: <em>Farewell</em></li>
+                <li>Holden Mui: <em>Pursuit</em></li>
+            </ul>
+
+            <h3 id="emerson2025">2025 Emerson Recital</h3>
+            This event already happened on April 18th, 2025 at MIT's Killian Hall. You can find a
+            recording of the concert
+            <a href="https://www.youtube.com/watch?v=RZOxspMTYgM">here</a>.
+            The program was as follows:
+            <ul>
+                <li>Maurice Ravel: <em>Le Tombeau de Couperin</em>
+                    <ul>
+                        <li>I. Prélude</li>
+                        <li>II. Fugue</li>
+                        <li>III. Forlane</li>
+                        <li>IV. Rigaudon</li>
+                        <li>V. Menuet</li>
+                        <li>VI. Toccata</li>
+                    </ul>
+                </li>
+                <li>Maurice Ravel: <em>Miroirs</em>
+                    <ul>
+                        <li>III. Une barque sur l'océan</li>
+                        <li>IV. Alborada del gracioso</li>
+                    </ul>
+                </li>
+                <li>Maurice Ravel: <em>La valse</em></li>
+            </ul>
+
+            <h3 id="technightpops2024">2024 Tech Night with the Boston Pops</h3>
+            This event already happened on May 31st, 2024 at Boston's Symphony Hall.
+            I performed George Gershwin's <em>Rhapsody in Blue</em> with the Boston Pops.
+
+            <h3 id="emerson2024">2024 Emerson Recital</h3>
+            This event already happened on April 12th, 2024 at MIT's Killian Hall. You can find a
+            recording of the concert
+            <a href="https://www.youtube.com/watch?v=JxymoV6DU9k">here</a>.
+            The program was as follows:
+            <ul>
+                <li>Nikolai Kapustin: <em>Eight Concert Etudes</em>, Op. 40
+                    <ul>
+                        <li>I. Prelude</li>
+                    </ul>
+                </li>
+                <li>Leoš Janáček: <em>In The Mists</em>
+                    <ul>
+                        <li>I. Andante</li>
+                        <li>III. Andantino</li>
+                    </ul>
+                </li>
+                <li>Grażyna Bacewicz: Piano Sonata No. 2
+                    <ul>
+                        <li>I. Maestoso. Agitato</li>
+                        <li>II. Largo</li>
+                        <li>III. Vivo</li>
+                    </ul>
+                </li>
+                <li>Claude Debussy: <em>L'isle joyeuse</em>, L. 106</li>
+                <li>Claude Debussy: <em>Ballade</em>, L. 70</li>
+                <li>Igor Stravinsky (arr. Guido Agosti): <em>Firebird Suite</em>
+                    <ul>
+                        <li>I. Infernal Dance of King Kashchei</li>
+                        <li>II. Lullaby</li>
+                        <li>III. Finale</li>
+                    </ul>
+                </li>
+            </ul>
+
+            <h3 id="mitso2023">2023 Fall MIT Symphony Orchestra Concert: Born Here</h3>
+            This event already happened on November 18th, 2023 at MIT's Kresge Auditorium.
+            I performed Sergei Rachmaninoff's Piano Concerto No. 3 in D minor, Op. 30 with the MIT Symphony Orchestra.
+            You can find a recording of the concert
+            <a href="https://www.youtube.com/watch?v=iJEU8Ro3py4">here</a>.
+
+            <h3 id="emerson2023">2023 Emerson Recital</h3>
+            This event already happened on April 14th, 2023 at MIT's Killian Hall. You can find a
+            recording of the concert
+            <a href="https://www.youtube.com/watch?v=EbYkzIh85tI">here</a>.
+            The program was as follows:
+            <ul>
+                <li>Frédéric Chopin: Ballade No. 1 in G minor, Op. 23</li>
+                <li>Frédéric Chopin: Ballade No. 2 in F major, Op. 38</li>
+                <li>Frédéric Chopin: Ballade No. 3 in A-flat major, Op. 47</li>
+                <li>Frédéric Chopin: Ballade No. 4 in F minor, Op. 52</li>
+                <li>Franz Liszt: Ballade No. 2 in B minor, S. 171</li>
+            </ul>
+
+            <h3 id="emerson2022">2022 Emerson Recital</h3>
+            This event already happened on April 15th, 2022 at MIT's Killian Hall. You can find a
+            recording of the concert
+            <a href="https://www.youtube.com/watch?v=iZxMIRD8BzE">here</a>.
+            The program was as follows:
+            <ul>
+                <li>Alexander Scriabin: <em>Prelude and Nocturne for the Left Hand</em>, Op. 9</li>
+                <li>Alexander Scriabin: Piano Sonata No. 4 in F-sharp major, Op. 30
+                    <ul>
+                        <li>I. Andante</li>
+                        <li>II. Prestissimo volando</li>
+                    </ul>
+                </li>
+                <li>Alexander Scriabin: Piano Sonata No. 6, Op. 62</li>
+                <li>Alexander Scriabin: Piano Sonata No. 9, Op. 68 "<em>Black Mass</em>"</li>
+                <li>Alexander Scriabin: <em>Vers la flamme</em>, Op. 72</li>
+                <li>Alexander Scriabin: Prelude in E major, Op. 11, No. 9</li>
+            </ul>
         </main>
     </body>
 
