--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <a href="other/writing.html">Writing</a>
                         <a href="other/gallery.html">Gallery</a>
                         <a href="other/news.html">News</a>
+                        <a href="other/links.html">Links</a>
                     </div>
                 </div>
             </nav>
@@ -94,7 +95,7 @@
             <p>I'm Holden!</p>
             <h2>About Me</h2>
             <p>
-                I'm currently a research engineer at 0xPARC Foundation working
+                I'm currently a research engineer at 0xPARC working
                 on programmable cryptography. In my spare time, I like to work
                 on my music projects. I recently graduated from MIT with a
                 mathematics and music major, along with a physics minor. I grew
