--- a/math/olympiad.html
+++ b/math/olympiad.html
@@ -67,6 +67,7 @@
                         <a href="../other/writing.html">Writing</a>
                         <a href="../other/gallery.html">Gallery</a>
                         <a href="../other/news.html">News</a>
+                        <a href="../other/links.html">Links</a>
                     </div>
                 </div>
             </nav>
