--- a/test.html
+++ b/test.html
@@ -54,6 +54,7 @@
               <a href="other/writing.html">Writing</a>
               <a href="other/gallery.html">Gallery</a>
               <a href="other/news.html">News</a>
+              <a href="other/links.html">Links</a>
           </div>
         </div>
       </nav>
