added performers for event

--- a/mit/events.html
+++ b/mit/events.html
@@ -76,21 +76,22 @@
             <h2>Past events</h2>
             <h3 id="compositionrecital">Composition Recital</h3>
             This event already happened on May 14th, 2025.
-            You can find recordings of the pieces on
+            You can find recordings on
             <a
                 href="https://www.youtube.com/playlist?list=PLRjA4SLedN6RrFRvtnvr-VQK9_DRHAdky"
                 >this playlist</a
             >.
             The program was as follows:
             <ul>
-                <li>Henry Mancini (arr. Holden Mui): <em>Moon River</em></li>
-                <li>Holden Mui: Fugue in E Major</li>
-                <li>Holden Mui: <em>Serenade and Toccata</em></li>
-                <li>Holden Mui: <em>Concert Etude for Solo Flute</em></li>
-                <li>Holden Mui: <em>Poetry</em></li>
-                <li>Holden Mui: <em>Farewell</em></li>
-                <li>Holden Mui: <em>Pursuit</em></li>
+                <li>Henry Mancini (arr. Holden Mui): <em>Moon River</em>, performed by Andrew Wu (piano)</li>
+                <li>Holden Mui: Fugue in E Major, performed by Andrew Wu (piano)</li>
+                <li>Holden Mui: <em>Serenade and Toccata</em>, performed by Andrew Wu (piano)</li>
+                <li>Holden Mui: <em>Concert Etude for Solo Flute</em>, performed by Jade Buckwalter (flute)</li>
+                <li>Holden Mui: <em>Poetry</em>, performed by Andrew Wu (piano)</li>
+                <li>Holden Mui: <em>Farewell</em>, performed by Valerie Chen (cello)</li>
+                <li>Holden Mui: <em>Pursuit</em>, performed by Changhwan Oh (conductor), Jade Buckwalter (flute), Kevin Wu (clarinet), Delia Harms (bassoon), Samantha Rencher (horn), Morgan Schaefer (trumpet), Frank Wang (percussion), William Wang (piano), Justin Yamaguchi (violin), Lizzy Joo (violin), Audrey Lim (viola), Sunmee Choi (cello), and Berk Soykan (bass)</li>
             </ul>
+            Special thanks to Emergent Ventures for funding this recital!
 
             <h3 id="emerson2025">2025 Emerson Recital</h3>
             This event already happened on April 18th, 2025 at MIT's Killian Hall. You can find a
@@ -114,7 +115,7 @@
                         <li>IV. Alborada del gracioso</li>
                     </ul>
                 </li>
-                <li>Maurice Ravel: <em>La valse</em></li>
+                <li>Maurice Ravel (arr. Holden Mui): <em>La valse</em></li>
             </ul>
 
             <h3 id="technightpops2024">2024 Tech Night with the Boston Pops</h3>
