--- a/other/links.html
+++ b/other/links.html
@@ -71,7 +71,7 @@
         <main>
             <h1>Links</h1>
             <p>
-                Here are some places you can find me on the internet.
+                Here are some places you can find me on the Internet.
             </p>
             <ul>
                 <li><a href="https://www.youtube.com/@theturtle1729" target="_blank">YouTube</a> – Piano performances and musical compositions</li>
